--- a/dotnetcore-sample/Views/Home/About.cshtml
+++ b/dotnetcore-sample/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "About";
+    ViewData["Title"] = "About 24/09/2018 13:06";
 }
 <h2>@ViewData["Title"].</h2>
 <h3>@ViewData["Message"]</h3>
